added field extraction notebook

--- a/experiments/Untitled.ipynb
+++ b/experiments/Untitled.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "2846302e-aad7-4850-a075-43ecb2508f7a",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "2efbd191-b948-41d8-b2e7-f86561b33c8a",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "b6062593-784c-4ede-810b-cf1103b152cf",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "a1069745-065a-44d9-b1fa-74cbd257563a",
    "metadata": {},
    "outputs": [
@@ -153,17 +153,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "id": "824dff47-e2ec-4cce-bf80-cddf3fa47b67",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbd92932c10>"
+       "<matplotlib.image.AxesImage at 0x7fb642da0ca0>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
