--- a/experiments/field_isolation.ipynb
+++ b/experiments/field_isolation.ipynb
@@ -2,27 +2,46 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "31faa94a",
+   "id": "6f8cc072",
    "metadata": {},
    "source": [
     "# Isolating the soccer field \n",
     "\n",
-    "> Decreasing the AOI : Area of Interest __using Vanilla CV Methods__ \n",
+    "> Decreasing the AOI : Area of Interest\n",
     "\n",
     "## Pipelines\n",
     "\n",
-    "- Pipeline 1 `P_IF_1` -> __`methods.P_IF_1`__\n",
-    "    - Blur \n",
-    "    - HSV Filtering \n",
-    "    - Hue based masking (filtering)\n",
+    "### Pipeline 1 `P_IF_1` -> __`methods.P_IF_1`__\n",
+    "\n",
+    "Simple __Vanilla CV__ method for separating green fields. \n",
+    "\n",
+    "```\n",
+    "Pipeline Description \n",
+    "1. Blur \n",
+    "2. HSV Filtering \n",
+    "3. Hue based masking (filtering)\n",
+    "```  \n",
+    "> Works well for given dataset but for some more varied dataset with less color differential between the crowd and the field, would require some pre-processing (increasing the dynamic range//decreasing the filter sens window)\n",
+    "\n",
+    "\n",
+    "### Pipeline 2 `P_IF_2` -> __`methods.P_IF_2`__\n",
+    "\n",
+    "A bit more advanced method using __vanilla CV__\n",
+    "\n",
+    "> Based on work described by \n",
     "    \n",
-    "    > Works well for given dataset but for some more varied dataset with less color differential between the crowd and the field, would require some pre-processing (increasing the dynamic range//decreasing the filter sens window)\n"
+    "    \n",
+    "### Pipeline 2 `P_IF_2` -> __`methods.P_IF_2`__\n",
+    "\n",
+    "Experimental method based on __semantic segmentation using Autoencoders__\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "438b0e02",
+   "id": "9f190aa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ee1fd2e0",
+   "id": "abbdae2a",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78fa3e86",
+   "id": "526725a6",
    "metadata": {},
    "source": [
     "# Testing on one frame from a random video pick "
@@ -80,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c081df22",
+   "id": "504f1fbc",
    "metadata": {},
    "source": [
     "## Picking a test image"
@@ -89,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "6353fc99",
+   "id": "9b1de073",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "552a133d",
+   "id": "989d010d",
    "metadata": {},
    "source": [
     "## Gaussian Blur "
@@ -146,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "fdb68a60",
+   "id": "9f866095",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "5376a0d1",
+   "id": "b1ccb432",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7c229fb",
+   "id": "5a7c391e",
    "metadata": {},
    "source": [
     "## Masking"
@@ -198,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "aea79ca3",
+   "id": "73b4cf3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "33fa63a1",
+   "id": "01b6ba5e",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff206455",
+   "id": "810db39d",
    "metadata": {},
    "source": [
     "## Masking on Blurred Frames "
@@ -256,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "c73ca387",
+   "id": "19ed07d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "3eee3cf1",
+   "id": "b358f0ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "ed411425",
+   "id": "3f73f58a",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fee49544",
+   "id": "cd93748a",
    "metadata": {},
    "source": [
     "## Creating the Final Pipeline `methods.P_IF_1`"
@@ -319,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "138dec87",
+   "id": "419cc6ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,20 +359,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e443b84",
+   "id": "e93afa76",
    "metadata": {},
    "source": [
     "# References \n",
     "- [PIS Blurring](https://pyimagesearch.com/2021/04/28/opencv-smoothing-and-blurring/)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2681aef9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
