added model boilerplate, still need to test if 4

--- a/utils/extraction_notebook.ipynb
+++ b/utils/extraction_notebook.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "import cv2\n",
     "import numpy as np\n",
-    "from matplotlib.pyplot import imshow"
+    "from matplotlib.pyplot import imshow\n",
+    "import glob, os"
    ]
   },
   {
@@ -19,7 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import glob, os\n",
     "\n"
    ]
   },
