--- a/utils/extraction_notebook.ipynb
+++ b/utils/extraction_notebook.ipynb
@@ -10,7 +10,8 @@
     "import cv2\n",
     "import numpy as np\n",
     "from matplotlib.pyplot import imshow\n",
-    "import glob, os"
+    "import glob, os\n",
+    "import time"
    ]
   },
   {
@@ -288,17 +289,215 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "02c6f6f7",
+   "metadata": {},
+   "source": [
+    "# Creating Splits for ds-bl database "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "96bdabd4",
+   "execution_count": 1,
+   "id": "6bd2a773",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "from matplotlib.pyplot import imshow\n",
+    "import glob, os\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2a745b70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find File \n",
+    "files = []\n",
+    "for file in glob.glob(\"../dataset/df-bl/*\"):\n",
+    "    files.append(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9d394b97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../dataset/df-bl/1606b0e6_0.mp4',\n",
+       " '../dataset/df-bl/1606b0e6_1.mp4',\n",
+       " '../dataset/df-bl/35bd9041_0.mp4',\n",
+       " '../dataset/df-bl/35bd9041_1.mp4',\n",
+       " '../dataset/df-bl/3c993bd2_0.mp4',\n",
+       " '../dataset/df-bl/3c993bd2_1.mp4',\n",
+       " '../dataset/df-bl/407c5a9e_1.mp4',\n",
+       " '../dataset/df-bl/4ffd5986_0.mp4',\n",
+       " '../dataset/df-bl/9a97dae4_1.mp4',\n",
+       " '../dataset/df-bl/cfbe2e94_0.mp4',\n",
+       " '../dataset/df-bl/cfbe2e94_1.mp4',\n",
+       " '../dataset/df-bl/ecf251d4_0.mp4']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8631aef9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------File Read\n",
+      "OPKEY: bl_1606b0e6_0\n",
+      "Picking and Saving Frames\n",
+      "Total Frames in Video: 85915.0\n",
+      "---------File Deleted\n",
+      "\n",
+      "\n",
+      "---------File Read\n",
+      "OPKEY: bl_1606b0e6_1\n",
+      "Picking and Saving Frames\n",
+      "Total Frames in Video: 85138.0\n",
+      "---------File Deleted\n",
+      "\n",
+      "\n",
+      "---------File Read\n",
+      "OPKEY: bl_35bd9041_0\n",
+      "Picking and Saving Frames\n",
+      "Total Frames in Video: 88653.0\n",
+      "---------File Deleted\n",
+      "\n",
+      "\n",
+      "---------File Read\n",
+      "OPKEY: bl_35bd9041_1\n",
+      "Picking and Saving Frames\n",
+      "Total Frames in Video: 87732.0\n",
+      "---------File Deleted\n",
+      "\n",
+      "\n",
+      "---------File Read\n",
+      "OPKEY: bl_3c993bd2_0\n",
+      "Picking and Saving Frames\n",
+      "Total Frames in Video: 89750.0\n",
+      "---------File Deleted\n",
+      "\n",
+      "\n",
+      "---------File Read\n",
+      "OPKEY: bl_3c993bd2_1\n",
+      "Picking and Saving Frames\n",
+      "Total Frames in Video: 88760.0\n",
+      "---------File Deleted\n",
+      "\n",
+      "\n",
+      "---------File Read\n",
+      "OPKEY: bl_407c5a9e_1\n",
+      "Picking and Saving Frames\n",
+      "Total Frames in Video: 87058.0\n",
+      "---------File Deleted\n",
+      "\n",
+      "\n",
+      "---------File Read\n",
+      "OPKEY: bl_4ffd5986_0\n",
+      "Picking and Saving Frames\n",
+      "Total Frames in Video: 87620.0\n",
+      "---------File Deleted\n",
+      "\n",
+      "\n",
+      "---------File Read\n",
+      "OPKEY: bl_9a97dae4_1\n",
+      "Picking and Saving Frames\n",
+      "Total Frames in Video: 83513.0\n",
+      "---------File Deleted\n",
+      "\n",
+      "\n",
+      "---------File Read\n",
+      "OPKEY: bl_cfbe2e94_0\n",
+      "Picking and Saving Frames\n",
+      "Total Frames in Video: 90500.0\n",
+      "---------File Deleted\n",
+      "\n",
+      "\n",
+      "---------File Read\n",
+      "OPKEY: bl_cfbe2e94_1\n",
+      "Picking and Saving Frames\n",
+      "Total Frames in Video: 89925.0\n",
+      "---------File Deleted\n",
+      "\n",
+      "\n",
+      "---------File Read\n",
+      "OPKEY: bl_ecf251d4_0\n",
+      "Picking and Saving Frames\n",
+      "Total Frames in Video: 85500.0\n",
+      "---------File Deleted\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find File \n",
+    "# Find File \n",
+    "files = []\n",
+    "for file in glob.glob(\"../dataset/df-bl/*\"):\n",
+    "    files.append(file)\n",
+    "for filePick in files:\n",
+    "\n",
+    "    cap = cv2.VideoCapture(filePick)\n",
+    "\n",
+    "    print('---------File Read')\n",
+    "    OPKEY = 'bl_'+filePick.split('/')[3].split('.')[0]\n",
+    "    print(f'OPKEY: {OPKEY}')\n",
+    "    \n",
+    "    \n",
+    "    print('Picking and Saving Frames')\n",
+    "    cap = cv2.VideoCapture(filePick)\n",
+    "    \n",
+    "    total_frames = cap.get(7)\n",
+    "    print(f'Total Frames in Video: {total_frames}')\n",
+    "\n",
+    "    for i in range(200):\n",
+    "        framePick = np.random.randint(total_frames)\n",
+    "        \n",
+    "        # Display Random Frame \n",
+    "        if framePick < int(total_frames):\n",
+    "            cap.set(1, framePick)\n",
+    "            ret, frame = cap.read()\n",
+    "#             imshow(frame)\n",
+    "        else:\n",
+    "            print('Frame Number selected larger than max frame')\n",
+    "        \n",
+    "        cv2.imwrite(f'../dataset/df-bl-annotated-v2/{OPKEY}_{i}.png',frame)\n",
+    "\n",
+    "    \n",
+    "#     os.remove(filePick)\n",
+    "    print('---------File Deleted')\n",
+    "    print('\\n')\n",
+    "    time.sleep(2)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bd2a773",
+   "id": "5a01adab",
    "metadata": {},
    "outputs": [],
    "source": []
