added line parameter estimation field

--- a/experiments/rectangle_localization.ipynb
+++ b/experiments/rectangle_localization.ipynb
@@ -104,7 +104,6 @@
    "cell_type": "markdown",
    "id": "b294de1b-3501-467f-b7d7-31b43f733a08",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -378,7 +377,6 @@
    "cell_type": "markdown",
    "id": "de66874c-fddd-4383-bd45-532e7541acee",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -485,7 +483,9 @@
   {
    "cell_type": "markdown",
    "id": "d0227b8e-3ae5-4682-8601-35f83bdd17b8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Method 4 : Vanishing Point\n",
     "\n",
