--- a/pipelines/P_1_FI - Field Isolation.ipynb
+++ b/pipelines/P_1_FI - Field Isolation.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "id": "1de40d26-6f2c-4cc2-b379-4308f0fc0885",
    "metadata": {},
    "outputs": [
@@ -232,8 +232,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|▉                                                                            | 117/10000 [03:02<4:17:34,  1.56s/it]"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 200/200 [05:45<00:00,  1.73s/it]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function VideoWriter.release>"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -243,7 +253,7 @@
     "\n",
     "out = cv2.VideoWriter('../outputs/P_1_FI.avi',cv2.VideoWriter_fourcc('M','J','P','G'), 10, (w,h))\n",
     "\n",
-    "for frame_index in tqdm(range(10000,20000)):\n",
+    "for frame_index in tqdm(range(10000,10200)):\n",
     "    cap.set(1, frame_index)\n",
     "    ret, frame = cap.read()\n",
     "    frame_w = frame.shape[1]\n",
