added full pipe

--- a/utils/create_image_chops.ipynb
+++ b/utils/create_image_chops.ipynb
@@ -18,11 +18,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "0bb3e88d-574f-446d-91df-1b4282722a9d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "from matplotlib.pyplot import imshow\n",
+    "import glob, os\n",
+    "import time\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "80b924ab-fab7-4021-9f37-5762cab25510",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set Dataset Path\n",
+    "inputLoc = Path('../datasets/dfl-bl/')\n",
+    "inputLoc = inputLoc.resolve()\n",
+    "\n",
+    "outputLoc = Path('../datasets/dfl-bl-obj/')\n",
+    "outputLoc = outputLoc.resolve()\n",
+    "    \n",
+    "chopsPerVid = 40 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "0d0592f7-de00-49b4-a7ed-64f2b0f55a11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def searching_all_files(directory: Path):   \n",
+    "    file_list = [] # A list for storing files existing in directories\n",
+    "\n",
+    "    for x in directory.iterdir():\n",
+    "        if x.is_file():\n",
+    "\n",
+    "           file_list.append(x)\n",
+    "        else:\n",
+    "\n",
+    "           file_list.append(searching_all_files(directory/x))\n",
+    "\n",
+    "    return file_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "922b04b6-ecf3-4890-817c-5794861f6bb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = searching_all_files(inputLoc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "9a5e91e9-4b51-43ea-accc-fa21c6ea5924",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found a vid, 1606b0e6_0, processing\n",
+      "Found a vid, 1606b0e6_1, processing\n",
+      "Found a vid, 35bd9041_0, processing\n",
+      "Found a vid, 3c993bd2_0, processing\n",
+      "Found a vid, 407c5a9e_1, processing\n",
+      "Found a vid, 4ffd5986_0, processing\n",
+      "Found a vid, cfbe2e94_0, processing\n",
+      "Found a vid, ecf251d4_0, processing\n"
+     ]
+    }
+   ],
+   "source": [
+    "for vid in files:\n",
+    "    if '.mp4' in str(vid):\n",
+    "        print(f'Found a vid, {vid.stem}, processing')\n",
+    "        \n",
+    "        cap = cv2.VideoCapture(str(vid))\n",
+    "        total_frames = cap.get(7)\n",
+    "        \n",
+    "        FILESTEM = vid.stem\n",
+    "        \n",
+    "        for chopNo in range(chopsPerVid):\n",
+    "            chop = np.random.randint(total_frames)\n",
+    "            cap.set(1, chop)\n",
+    "            ret, frame = cap.read()\n",
+    "            \n",
+    "            cv2.imwrite(str(outputLoc / str(FILESTEM  + f'_{chopNo}.png')),frame)            \n",
+    "            \n",
+    "        \n",
+    "        "
+   ]
   }
  ],
  "metadata": {
